# sft-test

./: .env.sample  README.md  pyproject.toml  requirements.txt  sqlite3.db
config/: urls.py
config/settings/: base.py
proj/main/: admin.py  apps.py  models.py  views.py
proj/main/migrations/: 0001_initial.py
